<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BNT Shine</string>
    <string name="action_settings">EDYTUJ NAZWY GŁÓWNE URZĄDZEŃ</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Ładowanie...</string>
    <string name="trwa_wczytywanie_danych_">Trwa wczytywanie danych...</string>
    <string name="ustawienia">USTAWIENIA</string>
    <string name="harmonogram">HARMONOGRAM</string>
    <string name="sceny">SCENY</string>
    <string name="global_off">GLOBAL OFF</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="nazwy">NAZWY</string>
    <string name="profile">PROFILE</string>
    <string name="opcje_global_off">OPCJE GLOBAL OFF</string>
    <string name="ustawienia_sieciowe">USTAWIENIA SIECIOWE</string>
    <string name="pomoc">POMOC</string>
    <string name="title_activity_help">Pomoc</string>
    <string name="calc">CALC</string>
    <string name="zadzwo_do_konsultanta">ZADZWOŃ DO KONSULTANTA</string>
    <string name="wy_lij_mail">WYŚLIJ MAIL</string>
    <string name="strona_www">STRONA WWW</string>
    <string name="bnt_systems">BNT SYSTEMS</string>
    <string name="title_activity_network_settings">Ustawienia sieciowe</string>
    <string name="adres_filtra_faz_">ADRES FILTRA FAZ:</string>
    <string name="wyszukaj_filtr_faz_automatycznie">WYSZUKAJ FILTR FAZ AUTOMATYCZNIE</string>
    <string name="ustaw_adres_manualnie">USTAW ADRES MANUALNIE</string>
    <string name="ip_">IP:</string>
    <string name="maska_">MASKA:</string>
    <string name="zmie_adres_sieciowy_filtra_faz">ZMIEŃ ADRES SIECIOWY FILTRA FAZ</string>
    <string name="title_activity_global_off_settings">Ustawienia Global Off</string>
    <string name="wybierz_spos_b_autoryzacji_global_off">WYBIERZ SPOSÓB AUTORYZACJI GLOBAL OFF</string>
    <string name="okienko_z_potwierdzeniem">OKIENKO Z POTWIERDZENIEM</string>
    <string name="symbol">SYMBOL</string>
    <string name="przytrzymanie_przycisku_przez_3_sekundy">PRZYTRZYMANIE PRZYCISKU PRZEZ 3 SEKUNDY</string>
    <string name="has_o">HASŁO</string>
    <string name="removeItem">Usuń</string>
    <string name="title_activity_profile">Profile</string>
    <string name="nazwy_w_asne_i_ikony">NAZWY WŁASNE I IKONY</string>
    <string name="zapisz_profil">ZAPISZ PROFIL</string>
    <string name="importuj_profil">IMPORTUJ PROFIL</string>
    <string name="usu_profil">USUŃ PROFIL</string>
    <string name="title_activity_names_settings">Ustawienia nazw</string>
    <string name="edytuj_nazwy_grup">EDYTUJ NAZWY GRUP</string>
    <string name="edytuj_nazwy_scen">EDYTUJ NAZWY SCEN</string>
    <string name="title_activity_device_list">Lista urządzeń / grup</string>
    <string name="zapisz_nazwy_do_serwera">ZAPISZ NAZWY DO SERWERA</string>
    <string name="title_activity_custom_names">Własne nazwy</string>
    <string name="title_activity_calc">CALC</string>
    <string name="title_activity_file_browser">FileBrowserActivity</string>
    <string name="ok">OK</string>
    <string name="anuluj">Anuluj</string>

</resources>
