<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NamesSettingsActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/editMainNamesButton"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/action_settings" />

        <Button
            android:id="@+id/editGroupNamesButton"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/edytuj_nazwy_grup" />

        <Button
            android:id="@+id/editSceneNames"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/edytuj_nazwy_scen" />

    </LinearLayout>

</RelativeLayout>
